# radiant

./: .gitignore  LICENSE  README.md  pyproject.toml
campaigns/germline_demo/: run.sh
campaigns/paper_ont/: run_ont_only.py
data/Sanger/: target1_reference.csv
data/runs/paper_ont/: target1_leads.csv  target1_picks.csv
data/runs/paper_ont/target1/consensus_annotate_out/: annotation_combined.fasta  annotation_output.csv
env/: setup_tools.sh
mock/: run_mock_pipeline.py  simulate_ont.py
packaging/radiant_annotator/: README.md  pyproject.toml
packaging/radiant_annotator/radiant_annotator/: __init__.py
radiant/: __init__.py  __main__.py  annotator.py  cli.py  cluster.py  codon.py  consensus.py  germline.py  mock.py  oas.py  output_table.py  picking.py  pipeline.py  preprocess.py  scaffold_db.py
scaffolds/: build_scaffold_db.py
scaffolds/reference/: germline_frameworks.txt
tests/: test_core.py
validation/: compare.py  results.json
